// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /Button Button in desktop screen 1`] = `
<div
  className="MuiBox-root-38 MuiBox-root-39"
>
  <div
    className="MuiBox-root-38 MuiBox-root-40"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-61"
  >
    <button
      className="MuiButtonBase-root-58 MuiButtonBase-disabled-59 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50 MuiButton-disabled-53"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-62"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedSecondary-51"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-63"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-text-43 MuiButton-textPrimary-44"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-64"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50 MuiButton-fullWidth-57"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Full Width
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiBox-root-1 MuiBox-root-2"
  >
    <div
      className="MuiBox-root-1 MuiBox-root-3"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Hower
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-24"
    >
      <button
        className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-25"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Cancel
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-26"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Back
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-27"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Full Width
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components /forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-402 MuiFormControl-marginNormal-403 MuiTextField-root-401"
  >
    <label
      className="MuiFormLabel-root-418 MuiInputLabel-root-406 MuiInputLabel-formControl-412 MuiInputLabel-animated-415 MuiInputLabel-shrink-414"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-438 MuiOutlinedInput-root-425 MuiInputBase-formControl-439"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-454 MuiOutlinedInput-notchedOutline-432"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-455"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-448 MuiOutlinedInput-input-433"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-473 MuiButtonBase-disabled-474 MuiButton-root-456 MuiButton-contained-464 MuiButton-containedPrimary-465 MuiButton-disabled-468"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-457"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components /forms TextField 1`] = `
<div
  className="MuiBox-root-476 MuiBox-root-477"
>
  <div
    className="MuiBox-root-476 MuiBox-root-478"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-480 MuiFormControl-marginNormal-481 MuiTextField-root-479"
      >
        <label
          className="MuiFormLabel-root-496 MuiFormLabel-error-499 MuiInputLabel-error-487 MuiInputLabel-root-484 MuiInputLabel-formControl-490 MuiInputLabel-animated-493 MuiInputLabel-shrink-492"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-516 MuiOutlinedInput-root-503 MuiInputBase-error-522 MuiOutlinedInput-error-508 MuiInputBase-formControl-517"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-532 MuiOutlinedInput-notchedOutline-510"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-533"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-526 MuiOutlinedInput-input-511"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-534 MuiFormHelperText-contained-538 MuiFormHelperText-error-535"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-476 MuiBox-root-542"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-480 MuiFormControl-marginNormal-481 MuiTextField-root-479"
      >
        <label
          className="MuiFormLabel-root-496 MuiInputLabel-root-484 MuiInputLabel-formControl-490 MuiInputLabel-animated-493 MuiInputLabel-shrink-492"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-516 MuiOutlinedInput-root-503 MuiInputBase-formControl-517"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-532 MuiOutlinedInput-notchedOutline-510"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-533"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-526 MuiOutlinedInput-input-511"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-476 MuiBox-root-543"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-480 MuiFormControl-marginNormal-481 MuiTextField-root-479"
      >
        <label
          className="MuiFormLabel-root-496 MuiFormLabel-disabled-498 MuiInputLabel-disabled-486 MuiInputLabel-root-484 MuiInputLabel-formControl-490 MuiInputLabel-animated-493 MuiInputLabel-shrink-492"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-516 MuiOutlinedInput-root-503 MuiInputBase-disabled-519 MuiOutlinedInput-disabled-505 MuiInputBase-formControl-517"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-532 MuiOutlinedInput-notchedOutline-510"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-533"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-526 MuiOutlinedInput-input-511 MuiInputBase-disabled-519 MuiOutlinedInput-disabled-505"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-476 MuiBox-root-544"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-480 MuiFormControl-marginNormal-481 MuiTextField-root-479"
      >
        <label
          className="MuiFormLabel-root-496 MuiInputLabel-root-484 MuiInputLabel-formControl-490 MuiInputLabel-animated-493 MuiInputLabel-shrink-492"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-516 MuiOutlinedInput-root-503 MuiInputBase-formControl-517"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-532 MuiOutlinedInput-notchedOutline-510"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-533"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-526 MuiOutlinedInput-input-511"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components Images 1`] = `
<img
  alt="Iov Logo"
  className="makeStyles-root-75"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-80 MuiBox-root-81"
>
  <div
    className="MuiBox-root-80 MuiBox-root-82"
  >
    <h4
      className="MuiTypography-root-84 MuiTypography-h4-92 MuiTypography-colorPrimary-107 makeStyles-inline-83"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-84 MuiTypography-h4-92 makeStyles-inline-83"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-80 MuiBox-root-114"
  >
    <h6
      className="MuiTypography-root-84 MuiTypography-h6-94"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-80 MuiBox-root-115"
  />
  <div
    className="MuiBox-root-80 MuiBox-root-116"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-117"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-122 MuiBox-root-123"
  >
    <label
      className="MuiFormControlLabel-root-124"
    >
      <span
        className="MuiSwitch-root-130"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-152 MuiIconButton-root-143 MuiPrivateSwitchBase-root-139 MuiSwitch-switchBase-131 MuiSwitch-colorPrimary-132"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-151"
          >
            <span
              className="MuiSwitch-thumb-137"
            />
            <input
              className="MuiPrivateSwitchBase-input-142 MuiSwitch-input-136"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-138"
        />
      </span>
      <span
        className="MuiTypography-root-155 MuiTypography-body1-157 MuiFormControlLabel-label-129"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-122 MuiBox-root-185"
  >
    <label
      className="MuiFormControlLabel-root-124"
    >
      <span
        className="MuiSwitch-root-130"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-152 MuiIconButton-root-143 MuiPrivateSwitchBase-root-139 MuiSwitch-switchBase-131 MuiSwitch-colorPrimary-132"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-151"
          >
            <span
              className="MuiSwitch-thumb-137"
            />
            <input
              className="MuiPrivateSwitchBase-input-142 MuiSwitch-input-136"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-138"
        />
      </span>
      <span
        className="MuiTypography-root-155 MuiTypography-body1-157 MuiFormControlLabel-label-129"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-277 MuiBox-root-278"
  >
    <div
      className="MuiBox-root-277 MuiBox-root-279"
    >
      <div
        className="MuiBox-root-277 MuiBox-root-280"
      >
        <button
          className="MuiButtonBase-root-298 MuiButton-root-281 MuiButton-contained-289 MuiButton-containedPrimary-290"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-282"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-302 MuiTypography-body1-304"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-302 MuiTypography-body2-303 MuiPaper-root-343 MuiPaper-elevation6-351 MuiSnackbarContent-root-340 makeStyles-info-334"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-341"
        >
          <div
            className="MuiBox-root-277 MuiBox-root-370 makeStyles-message-338"
          >
            <div
              className="makeStyles-iconBackground-339"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-371"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-302 MuiTypography-subtitle1-313 makeStyles-info-334"
            >
              Hi INFO
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-342"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-298 MuiIconButton-root-376 MuiIconButton-colorSecondary-381"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-384"
            >
              <img
                alt="Close"
                className="makeStyles-root-371"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-277 MuiBox-root-385"
    >
      <div
        className="MuiBox-root-277 MuiBox-root-386"
      >
        <button
          className="MuiButtonBase-root-298 MuiButton-root-281 MuiButton-contained-289 MuiButton-containedPrimary-290"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-282"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-302 MuiTypography-body1-304"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-302 MuiTypography-body2-303 MuiPaper-root-343 MuiPaper-elevation6-351 MuiSnackbarContent-root-340 makeStyles-warning-335"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-341"
        >
          <div
            className="MuiBox-root-277 MuiBox-root-387 makeStyles-message-338"
          >
            <div
              className="makeStyles-iconBackground-339"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-371"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-302 MuiTypography-subtitle1-313 makeStyles-warning-335"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-342"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-298 MuiIconButton-root-376 MuiIconButton-colorSecondary-381"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-384"
            >
              <img
                alt="Close"
                className="makeStyles-root-371"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-277 MuiBox-root-388"
    >
      <div
        className="MuiBox-root-277 MuiBox-root-389"
      >
        <button
          className="MuiButtonBase-root-298 MuiButton-root-281 MuiButton-contained-289 MuiButton-containedPrimary-290"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-282"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-302 MuiTypography-body1-304"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-302 MuiTypography-body2-303 MuiPaper-root-343 MuiPaper-elevation6-351 MuiSnackbarContent-root-340 makeStyles-error-333"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-341"
        >
          <div
            className="MuiBox-root-277 MuiBox-root-390 makeStyles-message-338"
          >
            <div
              className="makeStyles-iconBackground-339"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-371"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-302 MuiTypography-subtitle1-313 makeStyles-error-333"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-342"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-298 MuiIconButton-root-376 MuiIconButton-colorSecondary-381"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-384"
            >
              <img
                alt="Close"
                className="makeStyles-root-371"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-196 MuiBox-root-197"
  >
    <div
      className="makeStyles-container-199"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-202"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-196 MuiBox-root-207"
  >
    <p
      className="MuiTypography-root-209 MuiTypography-body1-211 makeStyles-inline-208"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-199"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-202"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-240 MuiTypography-h4-248"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-240 MuiTypography-h5-249"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-h6-250"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-240 MuiTypography-body1-242"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-240 MuiTypography-body2-241"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle2-252"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle2-252 MuiTypography-colorPrimary-263 makeStyles-inline-239"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle2-252 makeStyles-inline-239"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-545 MuiBox-root-546"
  id="/signup1"
>
  <div
    className="MuiBox-root-545 MuiBox-root-547"
  >
    <h4
      className="MuiTypography-root-549 MuiTypography-h4-557 MuiTypography-colorPrimary-572 makeStyles-inline-548"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-549 MuiTypography-h4-557 makeStyles-inline-548"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-545 MuiBox-root-579"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-545 MuiBox-root-580"
      >
        <div
          className="MuiFormControl-root-582 MuiFormControl-marginNormal-583 MuiFormControl-fullWidth-585 MuiTextField-root-581"
        >
          <label
            className="MuiFormLabel-root-598 MuiFormLabel-required-603 MuiInputLabel-required-590 MuiInputLabel-root-586 MuiInputLabel-formControl-592 MuiInputLabel-animated-595 MuiInputLabel-shrink-594"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-604 MuiInputLabel-asterisk-591"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-618 MuiOutlinedInput-root-605 MuiInputBase-fullWidth-627 MuiInputBase-formControl-619"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-634 MuiOutlinedInput-notchedOutline-612"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-635"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-628 MuiOutlinedInput-input-613"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-545 MuiBox-root-636"
      >
        <div
          className="MuiFormControl-root-582 MuiFormControl-marginNormal-583 MuiFormControl-fullWidth-585 MuiTextField-root-581"
        >
          <label
            className="MuiFormLabel-root-598 MuiFormLabel-required-603 MuiInputLabel-required-590 MuiInputLabel-root-586 MuiInputLabel-formControl-592 MuiInputLabel-animated-595 MuiInputLabel-shrink-594"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-604 MuiInputLabel-asterisk-591"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-618 MuiOutlinedInput-root-605 MuiInputBase-fullWidth-627 MuiInputBase-formControl-619"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-634 MuiOutlinedInput-notchedOutline-612"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-635"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-628 MuiOutlinedInput-input-613"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-545 MuiBox-root-637"
      >
        <div
          className="MuiFormControl-root-582 MuiFormControl-marginNormal-583 MuiFormControl-fullWidth-585 MuiTextField-root-581"
        >
          <label
            className="MuiFormLabel-root-598 MuiFormLabel-required-603 MuiInputLabel-required-590 MuiInputLabel-root-586 MuiInputLabel-formControl-592 MuiInputLabel-animated-595 MuiInputLabel-shrink-594"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-604 MuiInputLabel-asterisk-591"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-618 MuiOutlinedInput-root-605 MuiInputBase-fullWidth-627 MuiInputBase-formControl-619"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-634 MuiOutlinedInput-notchedOutline-612"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-635"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-628 MuiOutlinedInput-input-613"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-545 MuiBox-root-638"
      >
        <div
          className="MuiBox-root-545 MuiBox-root-639"
        >
          <button
            className="MuiButtonBase-root-657 MuiButton-root-640 MuiButton-text-642 MuiButton-textPrimary-643 MuiButton-fullWidth-656"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-641"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-545 MuiBox-root-660"
        >
          <button
            className="MuiButtonBase-root-657 MuiButtonBase-disabled-658 MuiButton-root-640 MuiButton-contained-648 MuiButton-containedPrimary-649 MuiButton-disabled-652 MuiButton-fullWidth-656"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-641"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-545 MuiBox-root-661"
  />
  <div
    className="MuiBox-root-545 MuiBox-root-662"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-663"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-678 MuiBox-root-679"
  id="/signup2"
>
  <div
    className="MuiBox-root-678 MuiBox-root-680"
  >
    <h4
      className="MuiTypography-root-682 MuiTypography-h4-690 MuiTypography-colorPrimary-705 makeStyles-inline-681"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-682 MuiTypography-h4-690 makeStyles-inline-681"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-678 MuiBox-root-712"
  >
    <div
      className="MuiBox-root-678 MuiBox-root-713"
    >
      <div
        className="MuiBox-root-678 MuiBox-root-714"
      >
        <div
          className="MuiBox-root-678 MuiBox-root-715"
        >
          <h6
            className="MuiTypography-root-682 MuiTypography-subtitle2-694 makeStyles-inline-681"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-717"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-720"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-725"
      >
        <span
          className="MuiSwitch-root-731"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-753 MuiIconButton-root-744 MuiPrivateSwitchBase-root-740 MuiSwitch-switchBase-732 MuiSwitch-colorPrimary-733"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-752"
            >
              <span
                className="MuiSwitch-thumb-738"
              />
              <input
                className="MuiPrivateSwitchBase-input-743 MuiSwitch-input-737"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-739"
          />
        </span>
        <span
          className="MuiTypography-root-682 MuiTypography-body1-684 MuiFormControlLabel-label-730"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-678 MuiBox-root-756"
    >
      <p
        className="MuiTypography-root-682 MuiTypography-body1-684 makeStyles-inline-681"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-678 MuiBox-root-757"
    >
      <div
        className="MuiBox-root-678 MuiBox-root-758"
      >
        <button
          className="MuiButtonBase-root-753 MuiButton-root-759 MuiButton-text-761 MuiButton-textPrimary-762 MuiButton-fullWidth-775"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-760"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-678 MuiBox-root-776"
      >
        <button
          className="MuiButtonBase-root-753 MuiButton-root-759 MuiButton-contained-767 MuiButton-containedPrimary-768 MuiButton-fullWidth-775"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-760"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-678 MuiBox-root-777"
  />
  <div
    className="MuiBox-root-678 MuiBox-root-778"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-720"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-789 MuiBox-root-790"
  id="/signup3"
>
  <div
    className="MuiBox-root-789 MuiBox-root-791"
  >
    <h4
      className="MuiTypography-root-793 MuiTypography-h4-801 MuiTypography-colorPrimary-816 makeStyles-inline-792"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-793 MuiTypography-h4-801 makeStyles-inline-792"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-789 MuiBox-root-823"
  >
    <h6
      className="MuiTypography-root-793 MuiTypography-subtitle1-804 makeStyles-inline-792"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-789 MuiBox-root-824"
      >
        <div
          className="MuiFormControl-root-826 MuiFormControl-marginNormal-827 MuiFormControl-fullWidth-829 MuiTextField-root-825"
        >
          <div
            className="MuiInputBase-root-843 MuiOutlinedInput-root-830 MuiInputBase-fullWidth-852 MuiInputBase-formControl-844"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-859 MuiOutlinedInput-notchedOutline-837"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-860"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-853 MuiOutlinedInput-input-838"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-789 MuiBox-root-861"
      >
        <div
          className="MuiBox-root-789 MuiBox-root-862"
        >
          <button
            className="MuiButtonBase-root-880 MuiButton-root-863 MuiButton-text-865 MuiButton-textPrimary-866 MuiButton-fullWidth-879"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-864"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-789 MuiBox-root-883"
        >
          <button
            className="MuiButtonBase-root-880 MuiButton-root-863 MuiButton-contained-871 MuiButton-containedPrimary-872 MuiButton-fullWidth-879"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-864"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-789 MuiBox-root-884"
  />
  <div
    className="MuiBox-root-789 MuiBox-root-885"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-886"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-901 MuiBox-root-902"
  id="/welcome"
>
  <div
    className="MuiBox-root-901 MuiBox-root-903"
  >
    <h4
      className="MuiTypography-root-905 MuiTypography-h4-913 MuiTypography-colorPrimary-928 makeStyles-inline-904"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-905 MuiTypography-h4-913 makeStyles-inline-904"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-901 MuiBox-root-935"
  >
    <p
      className="MuiTypography-root-905 MuiTypography-body1-907 makeStyles-inline-904"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-901 MuiBox-root-936"
    />
    <button
      className="MuiButtonBase-root-954 MuiButton-root-937 MuiButton-contained-945 MuiButton-containedPrimary-946 MuiButton-fullWidth-953"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-938"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-901 MuiBox-root-957"
    />
    <button
      className="MuiButtonBase-root-954 MuiButton-root-937 MuiButton-contained-945 MuiButton-containedPrimary-946 MuiButton-fullWidth-953"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-938"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-901 MuiBox-root-958"
    />
    <button
      className="MuiButtonBase-root-954 MuiButton-root-937 MuiButton-contained-945 MuiButton-containedPrimary-946 MuiButton-fullWidth-953"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-938"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-901 MuiBox-root-959"
  />
  <div
    className="MuiBox-root-901 MuiBox-root-960"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-961"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
